--- a/NeuralNet/NeuralNet.vcxproj.filters
+++ b/NeuralNet/NeuralNet.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="Net.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="NetApplicationInterface.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Net.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="NeuralNet.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="NetApplicationInterface.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
